# index.js
@@ -1,24 +1,43 @@
+require("dotenv").config();
 const express = require('express')
 const cors = require('cors')
 const app = express()
-const port = 8080;
-const swaggerUi = require('swagger-ui-express')
+const mariadb = require("mariadb")
+const port = process.env.APP_PORT
+/* console.log(process.env.APP_PORT);
+console.log(process.env.HOST);
+console.log(process.env.USER);
+console.log(process.env.PASS);
+console.log(process.env.NAME); */
+const swaggerUi = require('swagger-ui-express');
 const yamljs = require('yamljs');
 //const swaggerDocument = require('./docs/swagger.json');
 const swaggerDocument = yamljs.load('./docs/swagger.yaml');
 app.use(express.json())
 app.use(cors())
-const animes =[
+
+/* const animes =[
     {id:1, Nimi:"Parasyte: Teaching about life", Ilmumiseaasta:2014, Reiting: 8.8},
     {id:2, Nimi:"Reach you", Ilmumiseaasta:2009, Reiting: 7.8},
     {id:3, Nimi:"Akame ga Kill", Ilmumiseaasta:2014, Reiting: 7.7},
     {id:4, Nimi:"Death note", Ilmumiseaasta:2006, Reiting: 8.6},
     {id:5, Nimi:"Elf song", Ilmumiseaasta:2004, Reiting: 7.9}
-]
+] */
 
-app.get("/animes", (req, res)=>{
-    res.send(animes)
-})
+require("./routes/app_routes")(app)
+
+/* app.get("/animes", async(req, res)=>{
+    let connection
+    try{
+        connection = await pool.getConnection()
+        const rows = await connection.query("SELECT id, name FROM animes")
+        res.send(rows)
+    } catch (error){
+        throw error
+    } finally {
+        if(connection) return connection.end()
+    }
+}) */
 
 app.get("/animes/:id", (req, res)=>{
     if(typeof animes[req.params.id - 1] === 'undefined')
@@ -27,16 +46,22 @@ app.get("/animes/:id", (req, res)=>{
     }
     res.send(animes[req.params.id - 1])
 })
-
+app.get("/manga/:id", (req, res)=>{
+    if(typeof manga[req.params.id - 1] === 'undefined')
+    {
+        return res.status(404).send({error: "Manga isn't found"})
+    }
+    res.send(manga[req.params.id - 1])
+})
 app.post('/animes', (req, res)=>{
-    if(!req.body.Nimi || !req.body.Ilmumiseaasta || !req.body.Reiting){
+    if(!req.body.name || !req.body.release || !req.body.rating){
         return res.status(400).send({error: "One or all parameters are missing"})
     }
     let anime = {
         id: animes.length +1,
-        Nimi: req.body.Nimi,
-        Ilmumiseaasta: req.body.Ilmumiseaasta,
-        Reiting: req.body.Reiting
+        name: req.body.name,
+        release: req.body.release,
+        rating: req.body.rating
     }
     animes.push(anime)
 
@@ -44,6 +69,7 @@ app.post('/animes', (req, res)=>{
     .location(`${getBaseUrl(req)}/animes/${animes.length}`)
     .send(anime)
 })
+
 
 app.delete("/animes/:id", (req, res)=>{
     if(typeof animes[req.params.id - 1] === 'undefined')
@@ -55,9 +81,8 @@ app.delete("/animes/:id", (req, res)=>{
 })
 
 app.use("/docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument))
-app.listen(port, () => {console.log(`API up at: http://localhost:${port}`)})
+app.listen(port, async () => {console.log(`API up at: http://localhost:${port}`)})
 
 function getBaseUrl(req){
-    return req.connection && req.connection.encrypted ? 'https' : 
-    'http' + `://${req.headers.host}`
+    return req.connection && req.connection.encrypted ? 'https' : 'http' + `://${req.headers.host}`
 }
